--- a/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/Woohoo.ChecksumVerifier.AvaloniaDesktop.csproj
+++ b/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/Woohoo.ChecksumVerifier.AvaloniaDesktop.csproj
@@ -24,6 +24,10 @@
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="FluentAvaloniaUI" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="StyleCop.Analyzers">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Woohoo.Security.Cryptography" />
   </ItemGroup>
 
