--- a/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/Woohoo.ChecksumVerifier.AvaloniaDesktop.csproj
+++ b/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/Woohoo.ChecksumVerifier.AvaloniaDesktop.csproj
@@ -22,6 +22,7 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
+    <PackageReference Include="Devolutions.AvaloniaTheme.MacOS" />
     <PackageReference Include="FluentAvaloniaUI" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
     <PackageReference Include="StyleCop.Analyzers">
