Upgrade to .NET 10.

--- a/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/Woohoo.ChecksumVerifier.AvaloniaDesktop.csproj
+++ b/src/Woohoo.ChecksumVerifier.AvaloniaDesktop/Woohoo.ChecksumVerifier.AvaloniaDesktop.csproj
@@ -1,18 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <PublishSingleFile>true</PublishSingleFile>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <AssemblyTitle>Checksum Verifier</AssemblyTitle>
   </PropertyGroup>
 
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
-
 
   <ItemGroup>
     <PackageReference Include="Avalonia" />
